--- a/src/App.css
+++ b/src/App.css
@@ -89,7 +89,7 @@
 .iris-app-action-tile{
   width: 90%;
   height: 20%;
-  background-color: #002491;
+  background-color: #4dff6b;
   border-radius: 10px;
   margin-bottom: 5%;
   display: flex;
