--- a/src/iris-light-viewer.css
+++ b/src/iris-light-viewer.css
@@ -1,13 +1,33 @@
+.iris-light-viewer-canvas {
+    background-color: #ffffff;
+    width: offsetWidth;
+    height: offsetHeight;
+}
+
+.dual-view-container{
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 5% 95%;
+  grid-gap: 0px;
+  align-items: center;
+  justify-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .light-viewer-container {
   width: 100%;
   height: 100%;
   overflow: hidden;
   background-color: #ffffff;
-  position:relative
+  position:relative;
+  grid-column: 0;
+  grid-row: 0;
 }
 
-.iris-light-viewer-canvas {
-    background-color: #ffffff;
-    width: offsetWidth;
-    height: offsetHeight;
+.scene-3d-container{
+  width: 100%;
+  height: 100%;
+  grid-column: 0;
+  grid-row: 2 / 2;
 }
